[project]
name = "dnsrecon"
description = "DNS Enumeration Script"
readme = "README.md"
authors = [{ name = "Carlos Perez", email = "carlos_perez@darkoperator.com" }]
requires-python = ">=3.11"
urls.Homepage = "https://github.com/darkoperator/dnsrecon"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.scripts]
dnsrecon = "dnsrecon.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "dnsrecon.cli.__version__" }
dependencies = { file = "requirements.txt" }
optional-dependencies.dev = { file = "requirements-dev.txt" }

[tool.setuptools.packages.find]
include = ["dnsrecon*"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0.0"
addopts = "--no-header"
testpaths = [
    "tests",
    "tests/discovery/",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "tests",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".github",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 130
target-version = "py311"
show-fixes = true

[tool.ruff.lint]
select = ["E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "TCH",
    "RUF",
    "PT",
    ]
ignore = ["E721", "F403", "F405", "UP030"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
